--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -163,9 +163,6 @@
   }
 
   .team {
-    &__title {
-      font-size: 24px;
-    }
     &__info {
       max-width: 100%;
       &-hexagons {
