--- a/sass/sections/_header.scss
+++ b/sass/sections/_header.scss
@@ -28,7 +28,7 @@
     background-color: var(--black);
     #{$self}__ellipse {
       display: block !important;
-      z-index: 1;
+      z-index: 0;
     }
   }
   &__container {
